<resources>
    <string name="app_name">NewNutizen</string>
    <string name="refuse">Refuse</string>
    <string name="accept">Accept</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="str_loading_percent">%d%%</string>
    <string name="str_skippable_in_num">%d</string>
    <string name="str_adv_title">Ad:%s</string>
    <string name="str_skip_now"><![CDATA[Skip Now >>]]></string>
    <string name="special_content_uploaded">Special Content Uploaded</string>
    <string name="alert_me_only_when_favourite_channels">Alert Me Only WhenFavourite Channels</string>
    <string name="version">Version %s</string>
    <string name="terms_of_use">Terms Of User(v.%s)</string>
    <string name="english">English(USA)</string>
    <string name="language">Language</string>
    <string name="content_playback">Content Playback</string>
    <string name="network_quality_indicator">Network Quality Indicator</string>
    <string name="receive_notifications_for">Receive Notifications For</string>
    <string name="Video_On_Demand" translatable="false">Video On Demand(VOD)</string>
    <string name="live_stream">Live Stream</string>
    <string name="podcast" translatable="false">Podcast</string>
    <string name="live_tv">Live TV</string>
    <string name="radio">Radio</string>
    <string name="news">News</string>
    <string name="notifications">Notifications</string>
    <string name="new_content_uploaded">New Content Uploaded</string>
    <string name="published_new_contents">Published New Contents</string>
    <string name="language_setting">Language Setting</string>
    <string name="settings">Settings</string>
    <string name="select_language">Select language</string>
    <string name="using_mobile_data">You are using mobile data to watch this video</string>
    <string name="indonesia">Indonesia</string>
    <string name="not_video_info">No video playback address found</string>
    <string name="exit_2_close_app">Press the Return key to exit</string>
    <string name="do_you_want_to_exit">Do you want to exit ?</string>
    <string name="facebook_app_id">369562483423309</string>
    <string name="cancel_the_authorization">Cancel the authorization</string>
    <string name="fail">Login fail</string>
    <string name="error">The user name or password error</string>
    <string name="authorization_failure">Authorization Failure</string>
    <string name="loadfail">Load fails, try again later</string>
    <string name="login_failde">Login failed</string>
    <string name="reset_success">Password Reset Successful!</string>
    <string name="back_login">Back To Login Page</string>
    <string name="reset">Forget Password</string>
    <string name="reset_User">User ID:</string>
    <string name="reset_ID">submit failed,please try again</string>
    <string name="video_address">Video address does not exist</string>
    <string name="code">Code</string>
    <string name="input_code">Enter the code</string>
    <string name="update_time_and_writter" formatted="false">Uploaded %s %s</string>
    <string name="seconds_ago">%d seconds ago</string>
    <string name="minutes_ago">%d minutes ago</string>
    <string name="hours_ago">%d hours ago</string>
    <string name="yesterday">yesterday</string>
    <string name="days_ago">%d days ago</string>
    <string name="months_ago">%d months ago</string>
    <string name="years_ago">%d years ago</string>
    <string name="slideshow">SLIDESHOW</string>
    <string name="Search_content_can_not_be_empty">Search content can not be empty</string>
    <string name="username">Username</string>
    <string name="or">or</string>
    <string name="no_account">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="reset_password">address to reset password.</string>
    <string name="reset_hint">Your verification code will be sent to your email</string>
    <string name="reset_email">Please enter your email address</string>
    <string name="reset_Useremail">Email Address</string>
    <string name="toast_email">Lorem ipsum dolor sit amet, consectetur </string>
    <string name="toastemail">adipiscing elit. Quisque at velit et arcu auctor</string>
    <string name="enter_code">Please enter the verification code you received</string>
    <string name="from_us">from us.</string>
    <string name="password_twice">Then enter your new password twice.</string>
    <string name="enter_password">Enter your password with 6-9 alphanumeric.</string>
    <string name="your_code">Enter Your Code</string>
    <string name="new_password">New Password</string>
    <string name="new_psd">new password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="retype_password">retype password</string>
    <string name="reset_successful">Reset Successful</string>
    <string name="input_email">Please input E-mail</string>
    <string name="terbaru">TERBARU</string>
    <string name="terpopular">TERPOPULAR</string>
    <string name="editor">Pilihan Editor</string>
    <string name="newly">Terbaru</string>
    <string name="home">BERANDA</string>
    <string name="chs">CHANNELS</string>
    <string name="media">NATIONAL MEDIA</string>
    <string name="live">LIVE</string>
    <string name="new_info">NEWS</string>
    <string name="prayer">PRAYER</string>
    <string name="yassn">YASSIN</string>
    <string name="channel">CHANNEL</string>
    <string name="radios">RADIO</string>
    <string name="input_username">Please input user name</string>
    <string name="input_password">Please input Password</string>
    <string name="password_length">Password length of 6 to 9</string>
    <string name="confirm">Please input Password again</string>
    <string name="different">password is not the same</string>
    <string name="correct_email">Please enter the correct email</string>
    <string name="register_fail">Regisetr Failed </string>
    <string name="register">Register</string>
    <string name="user">User ID:</string>
    <string name="email">Emai address</string>
    <string name="password">Password</string>
    <string name="hint">Enter 6-9 alphanumeric</string>
    <string name="retype">Retype the password</string>
    <string name="submit">Submit</string>
    <string name="emai_login">E-mail</string>
    <string name="Password">Password</string>
    <string name="login">Login</string>
    <string name="forget">Forgot Password?</string>
    <string name="exists">Username or Email existss,please enter another </string>
    <string name="favourite_title">FAVOURITE</string>
    <string name="favourite_contents">CONTENTS</string>
    <string name="favourite_channels">CHANNELS</string>
    <string name="favourite_edit">Edit</string>
    <string name="favourite_delete">Delete</string>
    <string name="favourite_unfollow">Unfollow</string>
    <string name="favourite_cancel">Cancel</string>
    <string name="video">VIDEO</string>
    <string name="living">LIVE</string>
    <string name="pod">Podcast</string>
    <string name="kanal">KANAL</string>
    <string name="tv">TV</string>
    <string name="show_all">Show All</string>
    <string name="videos">%d videos</string>
    <string name="follow">%d followers</string>
    <string name="logout">Log out</string>
    <string name="sure">Are you sure?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="no_data">Oh ! Empty ...</string>
    <string name="measure_logout">Logout from the current account?</string>
    <string name="cancel">Cancel</string>
    <string name="viewers">%s views</string>
    <string name="editor_pick">Pilihan Editor</string>
    <string name="register_hint">dev please decide what message to display accordingly</string>
    <string name="tv_channels">All TV Channels</string>
    <string name="profile">Profil</string>
    <string name="login_time">Last Login:</string>
    <string name="bio">Bio</string>
    <string name="edit">Edit</string>
    <string name="save">Save</string>
    <string name="done">Done</string>
    <string name="remove">Remove</string>
    <string name="hint_bio">please enter your message</string>
    <string name="e_mail">e-mail</string>
    <string name="nu">nutizen@email.com</string>
    <string name="pwd">password</string>
    <string name="gender">Gender</string>
    <string name="not_specified">not_specified</string>
    <string name="birthday">Birthday</string>
    <string name="dot">******</string>
    <string name="go">*please proceed to Login page to reset password</string>
    <string name="choose">- - Tap to choose - -</string>
    <string name="pick">- - Tap to pick a date - -</string>
    <string name="edit_portrait">Edit Portrait</string>
    <string name="edit_bio">Edit Bio</string>
    <string name="edit_gender">Edit Gender</string>
    <string name="edit_hint">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna wirl</string>
    <string name="num">%d/200</string>
    <string name="okay">Okay</string>
    <string name="data_empty">The data is empty</string>
    <string name="tv_channel">Suggested TV Channels</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="other">Not to disclose</string>
    <string name="set_date">Set Date</string>
    <string name="ye">Yes</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="download_title">DOWNLOADS</string>
    <string name="err_email">The e-mail address is invaild</string>
    <string name="err_username">The username has been taken</string>
    <string name="input_alph">please enter your password with 6-9 alphanumeric</string>
    <string name="password_match">Passwords do not match</string>
    <string name="err">Username or Email exists</string>
    <string name="empty_email">the email is empty</string>
    <string name="empty_code">the code is empty</string>
    <string name="empty_password">the password is empty</string>
    <string name="show_more_comments">Show more comments</string>
    <string name="download_manager">Download manager</string>
    <string name="download_install">Install</string>
    <string name="download_downloading">downloading</string>
    <string name="download_finishing">Downloaded %1$s%</string>
    <string name="download_downloaded">Downloaded</string>
    <string name="download_initial">Initial</string>
    <string name="download_stopped">Stopped</string>
    <string name="download_paused">Paused</string>
    <string name="download_failed">Failed</string>
    <string name="download_finished">Finished</string>
    <string name="download_installed">Installed</string>
    <string name="download_cancel">Cancel</string>
    <string name="download_continue">Continue</string>
    <string name="download_notification">A download task finished</string>
    <string name="download_click_notify">View download task list</string>
    <string name="downloading_msg">Downloading…</string>
    <string name="download_task_added">A download task have been added to queue.</string>
    <string name="download_invalid_url">Invalid download url</string>
    <string name="downloaded_installed">Installed</string>
    <string name="download_delete_task">Delete download task</string>
    <string name="download_delete_task_file">Delete download task and file</string>
    <string name="download_deleted_task_ok">Download task  deleted</string>
    <string name="download_deleted_task_file_ok">Download task and file  deleted</string>
    <string name="download_file">Downloaded  %1$s</string>
    <string name="favourites">FAVORIT</string>
    <string name="download">download</string>
    <string name="help_amp_faq"><![CDATA[HELP&FAQ]]></string>
    <string name="notification">notification</string>
    <string name="unselected">unselected</string>
</resources>