<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBlack">


    <android.support.constraint.ConstraintLayout
        android:id="@+id/layout_cardview"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/bg_card_view"
        android:paddingBottom="35dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/portrait">

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginLeft="25dp"
            android:text="@string/username"
            android:textColor="@color/colorGreen"
            app:layout_constraintTop_toTopOf="parent"
            android:textSize="21sp"
            app:layout_constraintLeft_toLeftOf="parent"/>

        <View
            android:id="@+id/card_view"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:background="@color/colorGray"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_name" />

        <TextView
            android:id="@+id/title_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:text="@string/e_mail"
            android:textColor="@color/colorGrayGreen"
            android:textSize="18sp"
            app:layout_constraintLeft_toLeftOf="@id/tv_name"
            app:layout_constraintTop_toBottomOf="@id/card_view" />

        <TextView
            android:id="@+id/des_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/empty_email"
            android:textColor="@color/colorTintWhite"
            app:layout_constraintLeft_toLeftOf="@+id/title_email"
            app:layout_constraintTop_toBottomOf="@+id/title_email" />

        <TextView
            android:id="@+id/title_bio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:text="@string/bio"
            android:textColor="@color/colorGrayGreen"
            android:textSize="18sp"
            app:layout_constraintLeft_toLeftOf="@+id/title_email"
            app:layout_constraintTop_toBottomOf="@+id/des_email" />

        <TextView
            android:id="@+id/des_bio"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/hint_bio"
            android:textColor="@color/colorTintWhite"
            app:layout_constraintLeft_toLeftOf="@+id/title_bio"
            app:layout_constraintRight_toLeftOf="@+id/edit_bio"
            app:layout_constraintTop_toBottomOf="@+id/title_bio" />

        <ImageView
            android:id="@+id/edit_bio"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:scaleType="center"
            android:src="@mipmap/edit"
            app:layout_constraintBottom_toBottomOf="@id/des_bio"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/des_bio" />

        <TextView
            android:id="@+id/title_gender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:text="@string/gender"
            android:textColor="@color/colorGrayGreen"
            android:textSize="18sp"
            app:layout_constraintLeft_toLeftOf="@+id/title_bio"
            app:layout_constraintTop_toBottomOf="@+id/des_bio" />

        <TextView
            android:id="@+id/des_gender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/unselected"
            android:textColor="@color/colorTintWhite"
            app:layout_constraintLeft_toLeftOf="@+id/title_gender"
            app:layout_constraintTop_toBottomOf="@+id/title_gender" />

        <ImageView
            android:id="@+id/edit_gender"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:scaleType="center"
            android:src="@mipmap/edit"
            app:layout_constraintBottom_toBottomOf="@id/des_gender"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/des_gender" />

    </android.support.constraint.ConstraintLayout>


    <ImageView
        android:id="@+id/portrait"
        android:layout_width="86dp"
        android:layout_height="86dp"
        android:src="@mipmap/portrait"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/edit_portrait"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:scaleType="center"
        android:src="@mipmap/edit"
        app:layout_constraintBottom_toBottomOf="@id/portrait"
        app:layout_constraintLeft_toRightOf="@id/portrait"
        app:layout_constraintTop_toTopOf="@id/layout_cardview" />


</android.support.constraint.ConstraintLayout>