<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="#000">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/reset"
            android:textColor="#FFF"
            android:textSize="18sp" />

        <ImageView
            android:id="@+id/back"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="2dp"
            android:scaleType="center"
            android:src="@mipmap/btn_back" />

        <View
            android:id="@+id/line"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignParentBottom="true"
            android:background="#86B738" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@mipmap/login_bg"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="36dp"
            android:text="@string/enter_code"
            android:textColor="#AFFFFFFF"
            android:textSize="14sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="4dp"
            android:text="@string/from_us"
            android:textColor="#AFFFFFFF"
            android:textSize="14sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="4dp"
            android:text="@string/password_twice"
            android:textColor="#AFFFFFFF"
            android:textSize="14sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="4dp"
            android:text="@string/enter_password"
            android:textColor="#AFFFFFFF"
            android:textSize="14sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginEnd="24dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:src="@mipmap/ic_password" />

                <EditText
                    android:id="@+id/code"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:hint="@string/your_code"
                    android:inputType="text"
                    android:maxLines="1"
                    android:minWidth="400dp"
                    android:textColor="#FFF"
                    android:textColorHint="#AFFFFFFF"
                    android:textCursorDrawable="@null"
                    android:textSelectHandle="@drawable/search_select_handler"
                    android:textSelectHandleLeft="@drawable/search_select_handler"
                    android:textSelectHandleRight="@drawable/search_select_handler"
                    android:textSize="14sp" />

            </LinearLayout>

            <View
                android:id="@+id/code_line"
                android:layout_width="200dp"
                android:layout_height="2dp"
                android:background="#979797" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginEnd="24dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="126dp"
                    android:layout_height="wrap_content"
                    android:text="@string/new_password"
                    android:textColor="#AFFFFFFF"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:background="@null"
                    android:hint="@string/new_psd"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:textColor="#FFF"
                    android:textColorHint="#AFFFFFFF"
                    android:textCursorDrawable="@null"
                    android:textSelectHandle="@drawable/search_select_handler"
                    android:textSelectHandleLeft="@drawable/search_select_handler"
                    android:textSelectHandleRight="@drawable/search_select_handler"
                    android:textSize="14sp" />

            </LinearLayout>

            <View
                android:id="@+id/password_line"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="#979797" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginEnd="24dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="133dp"
                    android:layout_height="wrap_content"
                    android:text="@string/confirm_password"
                    android:textColor="#AFFFFFFF"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/confirm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="13dp"
                    android:background="@null"
                    android:hint="@string/retype_password"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:textColor="#FFF"
                    android:textColorHint="#AFFFFFFF"
                    android:textCursorDrawable="@null"
                    android:textSelectHandle="@drawable/search_select_handler"
                    android:textSelectHandleLeft="@drawable/search_select_handler"
                    android:textSelectHandleRight="@drawable/search_select_handler"
                    android:textSize="14sp" />

            </LinearLayout>

            <View
                android:id="@+id/confirm_line"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="#979797" />

        </LinearLayout>

        <TextView
            android:id="@+id/hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="6dp"
            android:maxLines="1"
            android:text=""
            android:textColor="#D1FF2828"
            android:textSize="12sp"
            android:visibility="invisible" />

        <ImageView
            android:id="@+id/submit"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:layout_marginEnd="24dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="48dp"
            android:background="@drawable/bg_reset_password" />

    </LinearLayout>

</LinearLayout>

